updating web site

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>My Portfolio Moises D</title>
+  <title>Moises Duarte</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -27,9 +29,11 @@
         <img src="assets/img/moises1.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Moises Duarte</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.facebook.com/moisesjesus.duartejimenez" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.facebook.com/moisesjesus.duartejimenez" class="facebook"><i
+              class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/duart_moises_bm/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/moises-duarte-944b26209/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/moises-duarte-944b26209/" class="linkedin"><i
+              class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -37,7 +41,8 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
+              <span>Portfolio</span></a></li>
         </ul>
       </nav>
     </div>
@@ -45,7 +50,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Moises Duarte</h1>
-      <p>I'm a <span class="typed" data-typed-items="Web Developer, Software Developer, Frontend Developer, React Developer "></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Web Developer, Frontend Developer, Angular Developer "></span></p>
     </div>
   </section>
 
@@ -53,9 +58,14 @@
     <section id="about" class="about">
       <div class="container">
 
-        <div class="section-title">
+        <div class="section-title ">
           <h2>About</h2>
-          <p>As an organized and highly motivated person, I am capable of adapting to any circumstance and always giving my best in any project, while at the same time making an effort to work as a team and promote values such as camaraderie.</p>
+          <p>Highly skilled Angular Developer with a passion for crafting exceptional frontend
+            experiences. Proficient in designing and implementing innovative web applications using the latest
+            technologies and best practices.
+            Possesses a solid understanding of the entire web development process, from concept to deployment. Adept at
+            collaborating with cross-functional teams to deliver robust and user-centric solutions. Continuously seeking
+            to expand knowledge and stay up-to-date with emerging trends in frontend development.</p>
         </div>
 
         <div class="row">
@@ -63,27 +73,30 @@
             <img src="assets/img/moises1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3> Software Developer &amp; Full Stack Developer.</h3>
+            <h3> Frontend Developer</h3>
             <p class="fst-italic">
-              With experience as a frontend developer using technologies like HTML, CSS, and Javascript powered with frameworks like  React to create web applications. .
+              With experience as a frontend developer using technologies like HTML, CSS, and Javascript powered with
+              frameworks like Angular 2+ to create web applications. .
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>Dec 26 1998</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1-239-822-0738</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Florida, USA</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Mduartedsp@gmail.com</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              I am passionate about frontend technologies, I really like the field of web development as well as the design response, I really like programming as css3, I am currently finishing my frontend career and I am very excited to start very soon with my other career in backend world, my goal is to become a full stack developer
+              I am passionate about frontend technologies, I really like the field of web development as well as the
+              design response, I really like programming as css3, I am currently finishing my frontend career and I am
+              very excited to start very soon with my other career in backend world, my goal is to become a full stack
+              developer
             </p>
           </div>
         </div>
@@ -95,7 +108,11 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>I believe I have great interpersonal skills as well as a desire to grow and gain knowledge.</p>
+          <p>As an accomplished Angular Developer and Frontend Developer, I possess a versatile skill set that enables
+            me to create seamless and captivating web applications. Proficient in harnessing the power of Angular, I
+            build dynamic and responsive interfaces with an emphasis on user experience. My expertise extends to the
+            entire frontend development stack, utilizing HTML, CSS, and JavaScript to craft visually appealing and
+            engaging websites.</p>
         </div>
 
         <div class="row skills-content">
@@ -105,21 +122,32 @@
             <div class="progress">
               <span class="skill">HTML <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">CSS <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">85%</i></span>
+              <span class="skill">JavaScript <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill"> Node.js<i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
@@ -128,23 +156,34 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">React.js <i class="val">80%</i></span>
+              <span class="skill">Angular <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">TypeScript <i class="val">90%</i></span>
+              <span class="skill">TypeScript <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">GIT, GITHUB, GIT-LAB, BIT-BUCKET<i class="val">80%</i></span>
+              <span class="skill">bootstrap<i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">API<i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
 
@@ -159,7 +198,10 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>My favorite area, where I can have fun and get frustrated at the same time, but the best place to improve myself</p>
+          <p>As a frontend developer! As a passionate and skilled professional in the realm of frontend development, I
+            take pride in crafting captivating and user-friendly web experiences. With a strong foundation in HTML, CSS,
+            and JavaScript, I have honed my expertise in creating responsive and visually appealing interfaces that
+            seamlessly adapt to various devices.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -168,31 +210,35 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap 2">
               <img src="assets/img/portfolio/Duartech1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Duartech4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App "><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Duartech4.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App "><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details2.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap3">
+            <div class="portfolio-wrap 3">
               <img src="assets/img/portfolio/web1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/web2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/web2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details3.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
-        
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/market1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/market2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/market2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -202,30 +248,50 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/project2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/project2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-detail4.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-        </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/home.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/services.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-detail5.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
 
         </div>
 
       </div>
-    </section> 
 
-  </main> 
+      </div>
+    </section>
+
+  </main>
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Moises Duarte</span></strong>
+        &copy; with ❤️ <strong><span>Moises Duarte</span></strong>
       </div>
-      
-    </div>
-  </footer> 
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    </div>
+  </footer>
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
