--- a/portfolio-detail-enigma.html
+++ b/portfolio-detail-enigma.html
@@ -51,7 +51,7 @@
                     <h2>Portfolio Details</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
-                        <li>Portfolio Details</li>
+
                     </ol>
                 </div>
 
@@ -69,22 +69,22 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/home.jpeg" alt="">
+                                    <img src="assets/img/portfolio/enigma/enigma1.jpg" alt="">
                                 </div>
-
-
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/services.jpg" alt="">
+                                    <img src="assets/img/portfolio/enigma/enigma2.jpg" alt="">
                                 </div>
-
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/conten.jpg" alt="">
+                                    <img src="assets/img/portfolio/enigma/enigma3.jpg" alt="">
                                 </div>
-
-
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/form.jpg" alt="">
+                                    <img src="assets/img/portfolio/enigma/enigma4.jpg" alt="">
                                 </div>
+                                <div class="swiper-slide">
+                                    <img src="assets/img/portfolio/enigma/enigma5.jpg" alt="">
+                                </div>
+
+
 
                             </div>
                             <div class="swiper-pagination"></div>
@@ -95,17 +95,16 @@
                         <div class="portfolio-info">
                             <h3>Project information</h3>
                             <ul>
-                                <li><strong>Category</strong>: Corporate Website.</li>
-                                <li><strong>Client</strong>: DMSS financial multiservices.</li>
-                                <li><strong>Project date</strong>: Feb 2023</li>
+                                <li><strong>Category</strong>: Corporate Brasilian Website.</li>
+
                                 <li><strong>Project URL</strong>: <a
-                                        href="https://www.dmss-financial-multiservices.online">Financial
-                                        Multiservices</a></li>
+                                        href="https://moisesjduarte.github.io/oenigma.github.io-master/">
+                                        Enigma</a></li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
-                            <h2>At our Financial Multiservices website, we are committed to providing a comprehensive
-                                range of financial solutions tailored to meet your individual and business requirements.
+                            <h2>Developed Enigma, an Angular application with dynamic data binding, component-driven
+                                architecture, and optimized performance for a responsive UI.
                             </h2>
                             <p>
 
