--- a/portfolio-detail-showtown.html
+++ b/portfolio-detail-showtown.html
@@ -51,7 +51,7 @@
                     <h2>Portfolio Details</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
-                        <li>Portfolio Details</li>
+
                     </ol>
                 </div>
 
@@ -69,53 +69,48 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/home.jpeg" alt="">
+                                    <img src="assets/img/portfolio/showtown/showtown1.jpg" alt="">
                                 </div>
-
-
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/services.jpg" alt="">
+                                    <img src="assets/img/portfolio/showtown/showtown2.jpg" alt="">
                                 </div>
-
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/conten.jpg" alt="">
+                                    <img src="assets/img/portfolio/showtown/showtown3.jpg"" alt="">
                                 </div>
-
-
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/form.jpg" alt="">
+                                <div class=" swiper-slide">
+                                    <img src="assets/img/portfolio/showtown/showtown4.jpg"" alt="">
                                 </div>
 
                             </div>
-                            <div class="swiper-pagination"></div>
+                            <div class=" swiper-pagination">
+                                </div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="col-lg-4">
-                        <div class="portfolio-info">
-                            <h3>Project information</h3>
-                            <ul>
-                                <li><strong>Category</strong>: Corporate Website.</li>
-                                <li><strong>Client</strong>: DMSS financial multiservices.</li>
-                                <li><strong>Project date</strong>: Feb 2023</li>
-                                <li><strong>Project URL</strong>: <a
-                                        href="https://www.dmss-financial-multiservices.online">Financial
-                                        Multiservices</a></li>
-                            </ul>
-                        </div>
-                        <div class="portfolio-description">
-                            <h2>At our Financial Multiservices website, we are committed to providing a comprehensive
-                                range of financial solutions tailored to meet your individual and business requirements.
-                            </h2>
-                            <p>
+                        <div class="col-lg-4">
+                            <div class="portfolio-info">
+                                <h3>Project information</h3>
+                                <ul>
+                                    <li><strong>Category</strong>: Personal Project.</li>
 
-                            </p>
+                                    <li><strong>Project URL</strong>: <a
+                                            href="https://moisesjduarte.github.io/showtown/">
+                                            Showtown</a></li>
+                                </ul>
+                            </div>
+                            <div class="portfolio-description">
+                                <h2>Built Show Town, an Angular app for streaming movies, integrating API data, with
+                                    responsive design and seamless user experience.
+                                </h2>
+                                <p>
+
+                                </p>
+                            </div>
                         </div>
+
                     </div>
 
                 </div>
-
-            </div>
         </section>
 
     </main>
