--- a/portfolio-detail-startwars.html
+++ b/portfolio-detail-startwars.html
@@ -51,7 +51,7 @@
                     <h2>Portfolio Details</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
-                        <li>Portfolio Details</li>
+
                     </ol>
                 </div>
 
@@ -69,22 +69,13 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/home.jpeg" alt="">
+                                    <img src="assets/img/portfolio/startwars/startwars.jpg" alt="">
                                 </div>
-
-
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/services.jpg" alt="">
-                                </div>
-
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/conten.jpg" alt="">
+                                    <img src="assets/img/portfolio/startwars/startwars2.jpg" alt="">
                                 </div>
 
 
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/form.jpg" alt="">
-                                </div>
 
                             </div>
                             <div class="swiper-pagination"></div>
@@ -95,17 +86,17 @@
                         <div class="portfolio-info">
                             <h3>Project information</h3>
                             <ul>
-                                <li><strong>Category</strong>: Corporate Website.</li>
-                                <li><strong>Client</strong>: DMSS financial multiservices.</li>
-                                <li><strong>Project date</strong>: Feb 2023</li>
+                                <li><strong>Category</strong>: Personal proyect Website.</li>
+                                <li><strong>Proyect On Build</strong></li>
+
                                 <li><strong>Project URL</strong>: <a
-                                        href="https://www.dmss-financial-multiservices.online">Financial
-                                        Multiservices</a></li>
+                                        href="https://moisesjduarte.github.io/start-wars-react/">
+                                        Star wars API</a></li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
-                            <h2>At our Financial Multiservices website, we are committed to providing a comprehensive
-                                range of financial solutions tailored to meet your individual and business requirements.
+                            <h2>Developed a React app utilizing the Star Wars API for dynamic data fetching, with state
+                                management, custom hooks, and responsive UI.
                             </h2>
                             <p>
 
