--- a/portfolio-detail-task-creator.html
+++ b/portfolio-detail-task-creator.html
@@ -51,7 +51,7 @@
                     <h2>Portfolio Details</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
-                        <li>Portfolio Details</li>
+
                     </ol>
                 </div>
 
@@ -69,22 +69,10 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/home.jpeg" alt="">
+                                    <img src="assets/img/portfolio/taskcreator/taskcreator.jpg" alt="">
                                 </div>
 
 
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/services.jpg" alt="">
-                                </div>
-
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/conten.jpg" alt="">
-                                </div>
-
-
-                                <div class="swiper-slide">
-                                    <img src="assets/img/portfolio/form.jpg" alt="">
-                                </div>
 
                             </div>
                             <div class="swiper-pagination"></div>
@@ -95,17 +83,16 @@
                         <div class="portfolio-info">
                             <h3>Project information</h3>
                             <ul>
-                                <li><strong>Category</strong>: Corporate Website.</li>
-                                <li><strong>Client</strong>: DMSS financial multiservices.</li>
-                                <li><strong>Project date</strong>: Feb 2023</li>
-                                <li><strong>Project URL</strong>: <a
-                                        href="https://www.dmss-financial-multiservices.online">Financial
-                                        Multiservices</a></li>
+                                <li><strong>Category</strong>: Personal proyect Website.</li>
+                                <li><strong>Client</strong>: React Task Creator</li>
+
+                                <li><strong>Project URL</strong>: <a href="https://gladtaskcreator.netlify.app/">Task
+                                        Creator</a></li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
-                            <h2>At our Financial Multiservices website, we are committed to providing a comprehensive
-                                range of financial solutions tailored to meet your individual and business requirements.
+                            <h2>Built a React-based Task Creator with custom hooks, local storage, error handling, and
+                                unit testing, deployed on Netlify.
                             </h2>
                             <p>
 
