--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Moises Duarte</h1>
-      <p>I'm a <span class="typed" data-typed-items="Web Developer, Frontend Developer, Angular Developer "></span></p>
+      <p><span class="typed"
+          data-typed-items="Web Developer, Frontend Developer, Angular Developer, Reat Developer, UI-UX "></span></p>
     </div>
   </section>
 
@@ -87,16 +88,23 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Mduartedsp@gmail.com</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              I am passionate about frontend technologies, I really like the field of web development as well as the
-              design response, I really like programming as css3, I am currently finishing my frontend career and I am
-              very excited to start very soon with my other career in backend world, my goal is to become a full stack
-              developer
+              Moises Duarte is a skilled UI Developer with experience in all phases of the Software Development
+              Lifecycle (SDLC). Specializing in Angular 14+, JavaScript, TypeScript, React.js, Node.js, and CSS,
+              e has a proven track record in building single-page applications, including four instances
+              with Angular 14+.
+
+              Proficient in MySQL, Moises Duarte excels in creating, optimizing, and maintaining relational databases.
+              He is adept at architecting component-based UI applications using Angular and NgRx, with a deep
+              understanding of Object-Oriented Programming concepts.
+              Webpack for efficient module bundling.
+              With a commitment to quality, Moises Duarte is accomplished in responsive web design and CSS techniques.
+              He has pioneered the creation of reusable TypeScript components for RESTful APIs and is
+              proficient in Micro Frontend Architecture and version control with GIT and related tools.
             </p>
           </div>
         </div>
@@ -136,7 +144,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">95%</i></span>
+              <span class="skill">JavaScript <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -156,7 +164,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Angular <i class="val">85%</i></span>
+              <span class="skill">Angular <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -164,7 +172,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">TypeScript <i class="val">95%</i></span>
+              <span class="skill">TypeScript <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -180,9 +188,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">API<i class="val">95%</i></span>
+              <span class="skill">React.js<i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -211,17 +219,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap 2">
-              <img src="assets/img/portfolio/Duartech1.png" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/Duartech4.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="App "><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details2.html" title="More Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-
+          <!-- portfolio -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap 3">
               <img src="assets/img/portfolio/web1.png" class="img-fluid" alt="">
@@ -233,16 +231,32 @@
             </div>
           </div>
 
+          <!-- duartech -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/market1.png" class="img-fluid" alt="">
+            <div class="portfolio-wrap 2">
+              <img src="assets/img/portfolio/Duartech1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/market2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/Duartech4.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details2.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
+
+          <!-- service -->
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/home.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/services.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-detail5.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          <!--  -->
+          <!-- to do list -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -256,17 +270,55 @@
           </div>
 
 
-
+          <!-- showtown -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/home.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/showtown/showtown1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/services.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-detail5.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/showtown/showtown2.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-detail-showtown.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
+          <!-- enigma -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/enigma/enigma1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/enigma/enigma2.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-detail-enigma.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <!-- startwars -->
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/startwars/startwars.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/startwars/startwars2.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-detail-startwars.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <!-- task creator -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/taskcreator/taskcreator.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/taskcreator/taskcreator.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-detail-task-creator.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+
 
 
 
