--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -50,7 +50,7 @@
           <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portfolio Details</li>
+            <li><strong>Portfolio Details</strong></li>
           </ol>
         </div>
 
@@ -89,8 +89,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>The main purpose is electronic merchandise, along with cloud computing services. With the vision of
-                providing the best online shopping service</h2>
+              <h2>The main purpose is electronic merchandise, along with cloud computing services.</h2>
               <p>
 
               </p>
