--- a/portfolio-detail5.html
+++ b/portfolio-detail5.html
@@ -99,7 +99,7 @@
                                 <li><strong>Client</strong>: DMSS financial multiservices.</li>
                                 <li><strong>Project date</strong>: Feb 2023</li>
                                 <li><strong>Project URL</strong>: <a
-                                        href="https://duartescripts.github.io/financial-services.github.io/services/">Financial
+                                        href="https://duartescripts.github.io/financial-services.github.io">Financial
                                         Multiservices</a></li>
                             </ul>
                         </div>
